<resources>
    <string name="app_name">ANKBİS</string>

    <string name="navigation_drawer_open">Menü Açılıyor</string>
    <string name="navigation_drawer_close">Menü Kapanıyor</string>

    <string name="action_settings">Ayarlar</string>
    <string name="action_ogmil">OGM İşlemleri</string>
    <string name="action_profil">Profilim</string>
    <string name="action_share">Paylaş</string>
    <string name="action_logout">Çıkış</string>
    <string name="action_send">Mail Gönder</string>
    <string name="action_cominicate">İletişim</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Boş Fdd</string>
    <string name="title_activity_login">Giriş</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
