<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_share"

        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_menu_share" />
</menu>
