<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_ogmil"
            android:icon="@drawable/ic_menu_ogmil"
            android:title="OGM İslemleri" />
        <item
            android:id="@+id/nav_profilim"
            android:icon="@drawable/ic_menu_manage"
            android:title="Profilim" />


    </group>

    <item android:title="@string/action_cominicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_send" />
        </menu>
    </item>

</menu>
